kubernetes/overlays/homelab-lenovo/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    tailscale.com/tags: "tag:k8s-home-assistant"

spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: home-assistant
      port:
        number: 8123
  tls:
    - hosts:
        - home-assistant
